# SIGNAL-management

SIG_management/: CMakeLists.txt  package.xml
SIG_management/include/SIG_management/: SIG_declare.h
SIG_management/launch/: SIG_management.launch
SIG_management/msg/: lidar_signal.msg
SIG_management/src/: SIGNAL_processing.cpp  SIG_manage.cpp
